# MaaEnd

./: .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .prettierignore  .prettierrc.mjs  AGENTS.md  PR_DESCRIPTION.md  README.en.md  README.md  issue_1185_comment.md  issue_1287_reply.md  maaendbot_issue_1290_comment.md  maatools.config.mts  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  other_issue.yml
.github/instructions/: go-service.instructions.md
.github/workflows/: check.yml  format.yml  i18n-sync.yml  install.yml  issue-ai-analysis.yml  issue-extract-error-logs.yml  optimize-img.yml  sync_schema_files.yml  task-issue-auto-label.yml  test.yml
agent/cpp-algo/: CMakeLists.txt  CMakePresets.json
agent/cpp-algo/source/: CMakeLists.txt  cv_utils.h  main.cpp  ocr_utils.h  utils.h
agent/cpp-algo/source/MapLocator/: MapAlgorithm.cpp  MapAlgorithm.h  MapLocateAction.cpp  MapLocateAction.h  MapLocator.cpp  MapLocator.h  MapTypes.h  MatchStrategy.cpp  MatchStrategy.h  MotionTracker.cpp  MotionTracker.h  YoloPredictor.cpp  YoloPredictor.h
agent/cpp-algo/source/MapNavigator/: MapNavigator.cpp  action_executor.cpp  action_wrapper.cpp  input_backend.cpp  input_backend.h  local_driver_lite.cpp  local_driver_lite.h  motion_controller.cpp  motion_controller.h  navi_config.h  navi_controller.cpp  navi_domain_types.h  navigation_session.cpp  navigation_session.h  navigation_state_machine.cpp  navigation_state_machine.h  position_provider.cpp  route_rejoin.cpp  route_rejoin.h  turn_scale_estimator.h  zone_transition_controller.cpp
agent/cpp-algo/source/image_binarization/: image_binarization.cpp  image_binarization.h
agent/cpp-algo/source/my_reco_1/: my_reco_1.cpp  my_reco_1.h
agent/go-service/: logger.go  main.go  register.go
assets/: interface.json
assets/misc/: CONTACT.md  LICENSE_SHORT.md
assets/resource/: en_us.json
assets/tasks/: AutoCollect.json  AutoEcoFarm.json  AutoEssence.json  AutoHeadhunting.json  AutoResell.json  AutoSwitchUITask.json  BakerEntry.json  BatchAddFriends.json  ClaimSimulationRewards.json  CollectThornyYazhen.json  Crafting.json  CreditShopping.json  DailyRewards.json  DeliveryJobs.json  DijiangRewards.json  EssenceFilter.json  EssenceTool.json  GearAssembly.json  GetWuling731.json  GiftOperator.json  ItemTransfer.json  ProtocolSpace.json  ReadAllWiki.json  RealTimeTask.json  SeizeEntrustTask.json  SimpleProductionBatchStart.json  Transfer.json  VisitFriends.json  Weapon.json
docs/developers/: autofight.md  common-buttons.md  custom-action.md  development.md  map-tracker.md  scene-manager.md
tests/: maa-tools-test.schema.json
tools/: build_and_install.py  cli_support.py  maadeps-download.py  map_tracker_tool.py  setup_workspace.py  validate_schema.py
(+554 files in other folders)
